add new functionalities and improve registration and login procedures